# agent-core-framework

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml  test.yml
scripts/: release.sh
src/agent_core_framework/: __init__.py  base_agent.py  exceptions.py  langchain_integration.py  models.py  orchestrator.py  service_registry.py
tests/: test_base_agent.py  test_models.py  test_orchestrator.py
