[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core-framework"
version = "0.1.0"
description = "Framework core para sistemas multi-agente con LangChain"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/tu-usuario/agent-core-framework"
"Repository" = "https://github.com/tu-usuario/agent-core-framework"